# simple-api/openapi.yaml
@@ -2,6 +2,8 @@
 # 2 paths: /hello, /add
 # /hello: GET, query parameter name, pattern: "^[a-zA-Z]*$"
 # /add: GET, query parameters num1, num2, integer type, required: true. The example of num1 is 10, num2 generate
+# /user: POST, no response. Parameter "name" with example "John Doe" and not longer than 20 characters, "address" with example "123 Main St", age with example [18, 21, 25]
+
 openapi: 3.0.0
 info:
   title: Simple API
@@ -62,3 +64,57 @@ paths:
       responses:
         '405':
           description: Method Not Allowed
+  /details:
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: John Doe
+                  maxLength: 20
+                address:
+                  type: string
+                  example: 123 Main St
+                age:
+                  type: string
+                  example: [18, 21, 25]
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+
+  /sum:
+    get:
+      parameters:
+        - name: x
+          in: query
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 10
+        - name: y
+          in: query
+          required: true
+          schema:
+            type: integer
+            minimum: 1000000000
+            maximum: 2000000000
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: integer
+        '400':
+          description: Bad Request
